--- a/Ecu911/_Imports.razor
+++ b/Ecu911/_Imports.razor
@@ -11,11 +11,13 @@
 @using Ecu911.Shared
 @using Ecu911.Modelos
 @using Ecu911.Servicios
-
+@using System.Text.Json;
+@using System.Text.Json.Serialization;
+@using System.Text.Unicode;
 @using System.Net.Http.Json
 @using System.Threading.Tasks
-@using System.Text.Json
-@using System.Text.Json.Serialization
+@*@using System.Runtime.dll;*@
+
 @inject IHttpClientFactory ClientFactory
 @inject HttpClient Http
 @inject ISnackbar snackBar
