--- a/Ecu911/Pages/EtapaPreparatoria.razor
+++ b/Ecu911/Pages/EtapaPreparatoria.razor
@@ -83,7 +83,7 @@
         try
         {
 
-        //NotSupportedException: Serialization and deserialization of 'System.DateOnly' instances are not supported.
+        //NotSupportedException: Serialization and deserialization of 'System.DateTime?' instances are not supported.
 
             response = await apiService.HttpClient.PostAsJsonAsync("Preparatoria", registro);
         }
