--- a/Ecu911/Shared/NavMenu.razor
+++ b/Ecu911/Shared/NavMenu.razor
@@ -4,4 +4,6 @@
     <MudNavLink Href="etapapreparatoria" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Etapa Preparatoria</MudNavLink>
     <MudNavLink Href="etapaprecontractual" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Etapa PreContractual</MudNavLink>
     <MudNavLink Href="etapacontractual" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Etapa Contractual</MudNavLink>
+    <MudDivider Class="my-2" />
+    <MudNavLink Href="usuarios" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.People">Usuarios</MudNavLink>
 </MudNavMenu>
