--- a/Ecu911/_Imports.razor
+++ b/Ecu911/_Imports.razor
@@ -16,6 +16,8 @@
 @using System.Text.Unicode;
 @using System.Net.Http.Json
 @using System.Threading.Tasks
+@inject Blazored.SessionStorage.ISessionStorageService sessionStorage
+@using Microsoft.AspNetCore.WebUtilities
 @*@using System.Runtime.dll;*@
 
 @using Ecu911.ResponseModels
@@ -27,6 +29,6 @@
 @inject ApiService apiService
 @inject AuthenticationStateProvider authProvider
 @inject NavigationManager navManager
-@inject Blazored.SessionStorage.ISessionStorageService sessionStorage
+
 
 @*@inject Servicios.Servicios_Api.Servicios_Api*@
